styles/_vars.scss
// 1.067 Minor Second
$font-size-large: 1.78rem;
$font-size-h1: 1.476rem;
$font-size-h2: 1.383rem;
$font-size-h3: 1.296rem;
$font-size-h4: 1.215rem;
$font-size-h5: 1.138rem;
$font-size-h6: 1.067rem;
$font-size-p: 1rem;
$font-size-small: 0.937rem;
$font-size-tiny: 0.878rem;

$color-primary: #4040ff;
$color-fg: #222;
$color-heading: #000;
$color-bg: #fff;
$color-footer-bg: #f5f5f5;
$color-footer-fg: #444;
$color-input-bg: #eee;
$color-input-border: #ddd;
$color-light-grey: #ddd;

$color-fg-dark: #ccc;
$color-footer-bg-dark: #000;
$color-heading-dark: #fff;
$color-bg-dark: #111;
$color-footer-fg-dark: #aaa;
$color-input-bg-dark: #222;
$color-input-border-dark: #333;
$color-primary-dark: #ffb600;
$color-light-grey-dark: #666;

